(almost) completed document parser
right now things will just break