@@ -3,14 +3,22 @@ package com.prunoideae.probejs.document;
 import com.prunoideae.probejs.document.comment.AbstractComment;
 import com.prunoideae.probejs.document.comment.CommentHandler;
 
+import java.util.HashMap;
 import java.util.List;
 import java.util.stream.Collectors;
 
 public class DocumentComment implements IDecorative {
     private final List<String> documentText;
+    private final HashMap<Class<? extends AbstractComment>, AbstractComment> abstractComments = new HashMap<>();
 
     public DocumentComment(List<String> documentText) {
         this.documentText = documentText.stream().map(String::strip).collect(Collectors.toList());
+        documentText
+                .stream()
+                .map(t -> t.startsWith("*") ? t.substring(1).strip() : t)
+                .filter(t -> CommentHandler.specialCommentHandler.containsKey(t.split(" ")[0]))
+                .map(t -> CommentHandler.specialCommentHandler.get(t.split(" ")[0]).apply(t))
+                .forEach(c -> abstractComments.put(c.getClass(), c));
     }
 
     public List<String> getRawDocumentText() {
@@ -18,12 +26,11 @@ public class DocumentComment implements IDecorative {
     }
 
     public List<AbstractComment> getSpecialComments() {
-        return documentText
-                .stream()
-                .map(t -> t.startsWith("*") ? t.substring(1).strip() : t)
-                .filter(t -> CommentHandler.specialCommentHandler.containsKey(t.split(" ")[0]))
-                .map(t -> CommentHandler.specialCommentHandler.get(t.split(" ")[0]).apply(t))
-                .collect(Collectors.toList());
+        return abstractComments.values().stream().toList();
+    }
+
+    public AbstractComment getSpecialComment(Class<? extends AbstractComment> clazz) {
+        return abstractComments.get(clazz);
     }
 
     public List<String> getDocumentText() {
